Next

  - pidfile written in daemon mode had incorrect pid.

  - supervisorctl: tail (non -f) did not pass through proper error
    messages when supplied by the server.

  - Log signal name used to kill processes at debug level.

  - supervisorctl "tail -f" didn't work with supervisorctl sections
    configured with an absolute unix:// URL

2.0b1

  - fundamental rewrite based on 1.0.6, use distutils (only) for
    installation, use ConfigParser rather than ZConfig, use HTTP for
    wire protocol, web interface, less lies in supervisorctl.

