@@ -20,6 +20,7 @@ minprocs=200                ; (min. avail process descriptors;default 200)
 ;childlogdir=/tmp            ; ('AUTO' child log dir, default $TEMP)
 ;user=chrism                 ; (default is current user, required if root)
 ;directory=/tmp              ; (default is not to cd during start)
+;environment=KEY=value       ; (key value pairs to add to environment)
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
